# Secure-Data-Processing-with-Client-Side-Tokenization

./: .gitignore  README.md
client/: .env  pyproject.toml  requirements.txt
client/configs/: customers_tokenization.yml
client/sdp_client/: cli.py  config.py  integration.py  results_client.py  token_vault_db.py  tokenization.py  transfer.py
client/src/sdp_client/: cli.py  crypto.py  integration.py  tokenization.py  transfer.py
client/src/sdp_client.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
infra/: compose.ps1  docker-compose.yml
infra/caddy/: Caddyfile
infra/caddy/pki/: caddy-root.crt
jobs/: spark_processor.py
server/: .env.example
server/ingestion_api/: Dockerfile  requirements.txt
server/ingestion_api/app/: __init__.py  database.py  main.py
server/ingestion_api/app/core/: __init__.py  rate_limit.py
server/ingestion_api/app/models/: token_vault.py
